doing design touchups

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    /* border: 1px solid red; */
 }
 
 .container {
@@ -10,19 +11,39 @@
     grid-template-rows: 100px 1fr;
 }
 
-.header{
+.header {
     grid-column: 2 / 6;
     box-shadow: 5px 5px 20px lightgray;
     display: grid;
-    grid-template: 1fr 1fr / 3fr 1fr;
+    gap: 15px;
+    grid-template: 1fr 2fr / 3fr 1fr;
 }
 
-.header > .search-bar {
+.search-box {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
-
 }
 
+.search-bar {
+    width: 60%;
+}
+
+.right-bar {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.welcome-bar {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.content-buttons {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
 
 
 .sidebar {
@@ -32,13 +53,15 @@
 }
 
 .content {
-    background-color: bisque;
-    margin: 15px;
+    /* margin: 15px; */
+    padding: 15px;
+    background-color: whitesmoke;
+    box-shadow: inset 0px 5px 10px lightgray;
     grid-column: 2 / 6;
     grid-row: 2 / 4;
     display: grid;
     gap: 15px;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
 }
 
 .announcements, .trending {
@@ -47,6 +70,23 @@
     grid-column: 2 / 3;
 }
 
-.card {
+.cards {
+    text-align: center;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    overflow: hidden;
+    /* resize: both; */
+    display: grid;
+    gap: 15px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+}
 
+.card {
+    background-color: white;
+    border-radius: 10px;
+}
+
+li {
+    list-style-type: none;
 }
